package AplicativosNewIphone.Internet;

public interface Internet {
	
	public void exibirPagina(String url);
	public void adicionarNovaAba();
	public void atualizarPagina();
	
}
