package AplicativosNewIphone.Musica;

public interface Musica {
	
	public void tocar();
	public void pausar();
	public void selecionarMusica(String musica);

}
