package AplicativosNewIphone.Telefone;

public interface Telefone {

	public void ligar(String numero);
	public void atender();
	public void iniciarCorreioVoz();
	
}
